--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Monstr</title>
-    <!-- <script src='js/index.js'></script> -->
-    <script src='js/demo.js'></script>
+    <script src='js/index.js'></script>
+    <!-- <script src='js/demo.js'></script> -->
   </head>
   <body>
     <h1>Monstr Inc.</h1>
     <div id='create-monster'></div>
+      <form id="monster-form">
+        <input id='name' placeholder='name...'>
+        <input id='age' placeholder='age...'>
+        <input id='description' placeholder='description...'>
+        <button id='create'>Create Monster</button>
+      </form>
     <div id='monster-container'></div>
+    <!--List of Monsters goes here-->
     <button id="back"><=</button>
     <button id="forward">=></button>
   </body>
